--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -48,11 +48,27 @@
   }
 }
 
-.logo {
+.logoLarge {
   width: 7.375rem;
 
   @media (min-width: breakpoint.$desktop) {
     margin: space.$s0 space.$s4;
+  }
+
+  &.isCollapsed {
+    display: none;
+  }
+}
+
+.logoSmall {
+  display: none;
+
+  @media (min-width: breakpoint.$desktop) {
+    margin: space.$s0 space.$s4;
+  }
+
+  &.isCollapsed {
+    display: block;
   }
 }
 
