--- a/styles/misc.scss
+++ b/styles/misc.scss
@@ -1,1 +1,7 @@
-$header-height: 4rem;
+$header-height: 4.5rem;
+$header-height-desktop: 5rem;
+$footer-height: 3.75rem;
+$footer-height-mobile: 11.0625rem;
+
+// Shadow
+$shadow-xs: 0 1px 2px 0 rgb(16 24 40 / 5%);
